force-app/main/default/objects/PUD_Container__c/PUD_Container__c.object-meta.xml
<CustomObject>
    <description>Object to store container types, expected, actual containers against booking and job. Child containers will be updated by depot supervisor and MobileStar integration.</description>
    <label>Container</label>
    <nameField>
        <displayFormat>CN-{00000}</displayFormat>
        <label>Container Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Containers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>