force-app/main/default/objects/PUD_Container__c/fields/Actual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Actual_Quantity__c</fullName>
    <description>Actual Quantity of containers. This field is captured in dispatch system by the drivers and pushed into Salesforce via Job Actions interface from MobileStar/Tibco.</description>
    <inlineHelpText>Actual Quantity of containers. This field is captured in dispatch system by the drivers and pushed into Salesforce via Job Actions interface from MobileStar/Tibco.</inlineHelpText>
    <label>Actual Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>