force-app/main/default/objects/PUD_Container__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <description>Parent booking for child containers</description>
    <inlineHelpText>Parent booking for child containers</inlineHelpText>
    <label>Booking</label>
    <referenceTo>PUD_Booking__c</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>