force-app/main/default/objects/PUD_Container__c/fields/Condition__c.field-meta.xml
<CustomField>
    <fullName>Condition__c</fullName>
    <description>Condition of container</description>
    <inlineHelpText>Condition of container</inlineHelpText>
    <label>Condition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Empty</fullName>
            </value>
            <value>
                <fullName>Full</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>