force-app/main/default/objects/PUD_Container__c/fields/Expected_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quantity__c</fullName>
    <description>Expected Quantity of containers. Value of this field is entered in Salesforce and pushed to dispatch interface for drivers.</description>
    <inlineHelpText>Expected Quantity of containers. Value of this field is entered in Salesforce and pushed to dispatch interface for drivers.</inlineHelpText>
    <label>Expected Quantity</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>