force-app/main/default/objects/PUD_Container__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Job associated with containers</description>
    <inlineHelpText>Job associated with containers</inlineHelpText>
    <label>Job</label>
    <referenceTo>PUD_Job__c</referenceTo>
    <relationshipLabel>Containers</relationshipLabel>
    <relationshipName>Containers</relationshipName>
    <type>Lookup</type>
</CustomField>