force-app/main/default/objects/PUD_Container__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Specify type of container</description>
    <inlineHelpText>Specify type of container</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aircan</fullName>
            </value>
            <value>
                <fullName>Cage</fullName>
            </value>
            <value>
                <fullName>Cardboard ULD</fullName>
            </value>
            <value>
                <fullName>Colby</fullName>
            </value>
            <value>
                <fullName>Pallet</fullName>
            </value>
            <value>
                <fullName>Trailer</fullName>
            </value>
            <value>
                <fullName>ULD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>