force-app/main/default/objects/PUD_Container__c/recordTypes/Booking_Container.recordType-meta.xml
<RecordType>
    <fullName>Booking_Container</fullName>
    <active>true</active>
    <description>Containers related bookings. These containers specified at Booking level are created against relevant jobs.</description>
    <label>Booking Container</label>
</RecordType>