force-app/main/default/objects/PUD_Container__c/recordTypes/Job_Container.recordType-meta.xml
<RecordType>
    <fullName>Job_Container</fullName>
    <active>true</active>
    <description>Containers related jobs. These are created and synchronised with containers at Booking level.</description>
    <label>Job Container</label>
</RecordType>